--- a/MegaProject.html
+++ b/MegaProject.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mega Project</title>
-    <link rel="stylesheet" href="../Mega Project/MegaProject.css">
+    <link rel="stylesheet" href="../project-for-shoes/MegaProject.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
     
-    <script src="../Mega Project/MegaProject.js"></script>
+    <script src="../project-for-shoes/MegaProject.js"></script>
 </body>
 </html>
